# auto_renew_bot

./: .deployignore  .gitignore  .gitmodules  Cargo.toml  README.md  compose.yml  config.template.toml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: rust.yml
bot/: Cargo.toml  Dockerfile  build.rs
bot/proto/: status.proto
bot/src/: bot.rs  config.rs  discord.rs  indexer_status.rs  logger.rs  main.rs  models.rs  pipelines.rs  sales_tax.json  sales_tax.rs  starknet_utils.rs  starknetid_utils.rs  utils.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: apibara.rs  apibara_utils.rs  config.rs  discord.rs  listeners.rs  main.rs  models.rs  processing.rs
indexer/src/endpoints/: is_ready.rs  mod.rs
