[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/Th0rgal/starknet-rs.git", branch = "feat/starknet-id" }
mongodb = "2.1.0"
bson = "2.0.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
futures = "0.3"
url = "2.3.1"
bigdecimal = "0.3.0"
anyhow = "1.0"
serenity = "0.11.5"
serde_json = "1.0"
lazy_static = "1.4.0"
reqwest = "0.11.18"
num-integer = "0.1.45"

