[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apibara-sdk = { git = "https://github.com/apibara/apibara.git", rev = "7a540aa" }
apibara-core = { git = "https://github.com/apibara/apibara.git", rev = "7a540aa" }
starknet = { git = "https://github.com/Th0rgal/starknet-rs.git", branch = "feat/starknet-id" }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
chrono = "0.4.24"
anyhow = "1.0.69"
toml = "0.5.10"
csv = "1.2.1"
bigdecimal = "0.3.0"
lazy_static = "1.4.0"
mongodb = "2.4.0"
bson = "1.0"
thiserror = "1.0.40"
